19/03/22 반응형 수정

--- a/html/hkcosm_1.html
+++ b/html/hkcosm_1.html
@@ -25,8 +25,11 @@
                 <li class="lang-list-item"><a href="#" class="lang-list-link">CN</a></li>
             </ul>
         </div>
+        <div class="gnb-btn">
+            <button><span></span><span></span><span></span></button>
+        </div>
     </div>
-    <div class="header-bottom">
+    <div class="header-bottom active">
         <nav class="gnb">
             <ul class="gnb-depth1">
                 <li class="gnb-depth1-item">
@@ -78,6 +81,13 @@
                     </ul>
                 </li>
             </ul>
+            <div class="lang">
+                <ul class="lang-list">
+                    <li class="lang-list-item"><a href="#" class="lang-list-link">KR</a></li>
+                    <li class="lang-list-item"><a href="#" class="lang-list-link">EN</a></li>
+                    <li class="lang-list-item"><a href="#" class="lang-list-link">CN</a></li>
+                </ul>
+            </div>
         </nav>
     </div>
 </header>
@@ -89,7 +99,7 @@
     </ul>
     <div class="mainVisual-text">
         <h2 class="mainVisual-text-heading">BEAUTY FULL<br class="br"> SOLUTION</h2>
-        <div class="mainVisual-text-con">늘 앞선 생각과 발 빠른 창조로 내일의 이슈를 만들어 갑니다.</div>
+        <div class="mainVisual-text-con">늘 앞선 생각과 발 빠른 창조로<br class="br-con"> 내일의 이슈를 만들어 갑니다.</div>
         <div class="moreBtn">
             <a href="#" class="moreBtn-link">Learn More</a>
         </div>
@@ -98,12 +108,14 @@
 
 <section class="total">
     <div class="container">
-        <h2 class="total-title">TOTAL CONSULTING</h2>
-        <p class="total-text">한국화장품제조는 56년의 역사와 전통 속에서 자사 브랜드 개발/ 생산/ 유통의<br />
-            모든 경험을 확보하고 있으며 이를 바탕으로 귀사에 최적화된 솔루션을 제시합니다.
-        </p>
-        <div class="moreBtn">
-            <a href="#" class="moreBtn-link">Learn More</a>
+        <div class="total-wrap">
+            <h2 class="total-title">TOTAL CONSULTING</h2>
+            <p class="total-text">한국화장품제조는 56년의 역사와 전통 속에서 자사 브랜드 개발/ 생산/ 유통의<br class="br-con">
+                모든 경험을 확보하고 있으며 이를 바탕으로 귀사에 최적화된 솔루션을 제시합니다.
+            </p>
+            <div class="moreBtn">
+                <a href="#" class="moreBtn-link">Learn More</a>
+            </div>
         </div>
     </div>
 
@@ -114,39 +126,49 @@
         <ul class="production-list">
             <li class="production-list-item">
                 <a href="#" class="production-list-link">
-                    <img src="../images/prod_img1.jpg" alt="ABOUT US">
-                    <div class="overlay">
-                        <div class="overlay-wrap">
-                            <div class="overlay-wrap-text">
-                                <div class="overlay-wrap-text-title">ABOUT US</div>
-                                <div class="overlay-wrap-text-con">건강한 아름다움을 실현하는 한국화장품제조</div>
+                    <div class="production-list-left">
+                        <div class="production-list-text">
+                            <div class="production-list-text-wrap">
+                                <div class="production-list-text-title">ABOUT US</div>
+                                <div class="production-list-text-con">건강한 아름다움을 실현하는 한국화장품제조</div>
                             </div>
+                        </div>
+                        <div class="production-list-img">
+                            <img src="../images/prod_img1.jpg" alt="ABOUT US">
+                            <span></span>
                         </div>
                     </div>
                 </a>
             </li>
             <li class="production-list-item">
                 <a href="#" class="production-list-link">
-                    <img src="../images/prod_img2.jpg" alt="R&D">
-                    <div class="overlay">
-                        <div class="overlay-wrap">
-                            <div class="overlay-wrap-text">
-                                <div class="overlay-wrap-text-title">R&ampD</div>
-                                <div class="overlay-wrap-text-con">친수성, 약산성, 바이오, 리포좀 등을 이용한 특별한 기술</div>
+                    <div class="production-list-right">
+                        <div class="production-list-text">
+                            <div class="production-list-text-wrap">
+                                <div class="production-list-text-title">R&amp;D</div>
+                                <div class="production-list-text-con">친수성, 약산성, 바이오, 리포좀 등을 이용한 특별한 기술</div>
                             </div>
+                        </div>
+                        <div class="production-list-img">
+                            <img src="../images/prod_img2.jpg" alt="R&amp;D">
+                            <span></span>
                         </div>
                     </div>
                 </a>
             </li>
+
             <li class="production-list-item">
                 <a href="#" class="production-list-link">
-                    <img src="../images/prod_img3.jpg" alt="production system">
-                    <div class="overlay">
-                        <div class="overlay-wrap">
-                            <div class="overlay-wrap-text">
-                                <div class="overlay-wrap-text-title">PRODUCTION SYSTEM</div>
-                                <div class="overlay-wrap-text-con">완벽한 품질을 위한 노력, 최첨단 종합 뷰티제조시설</div>
+                    <div class="production-list-right">
+                        <div class="production-list-text">
+                            <div class="production-list-text-wrap">
+                                <div class="production-list-text-title">PRODUCTION SYSTEM</div>
+                                <div class="production-list-text-con">완벽한 품질을 위한 노력, 최첨단 종합 뷰티제조시설</div>
                             </div>
+                        </div>
+                        <div class="production-list-img">
+                            <img src="../images/prod_img3.jpg" alt="PRODUCTION SYSTEM">
+                            <span></span>
                         </div>
                     </div>
                 </a>
@@ -250,7 +272,7 @@
 
             <a href="#" class="footer-text-privacy">개인정보취급방침</a>
 
-            <div class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</div>
+            <span class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</span>
 
         </div>
 
