--- a/html/hkcosm_2_1.html
+++ b/html/hkcosm_2_1.html
@@ -25,8 +25,11 @@
                 <li class="lang-list-item"><a href="#" class="lang-list-link">CN</a></li>
             </ul>
         </div>
+        <div class="gnb-btn">
+            <button><span></span><span></span><span></span></button>
+        </div>
     </div>
-    <div class="header-bottom">
+    <div class="header-bottom active">
         <nav class="gnb">
             <ul class="gnb-depth1">
                 <li class="gnb-depth1-item">
@@ -78,6 +81,13 @@
                     </ul>
                 </li>
             </ul>
+            <div class="lang">
+                <ul class="lang-list">
+                    <li class="lang-list-item"><a href="#" class="lang-list-link">KR</a></li>
+                    <li class="lang-list-item"><a href="#" class="lang-list-link">EN</a></li>
+                    <li class="lang-list-item"><a href="#" class="lang-list-link">CN</a></li>
+                </ul>
+            </div>
         </nav>
     </div>
 </header>
@@ -236,7 +246,7 @@
 
             <a href="#" class="footer-text-privacy">개인정보취급방침</a>
 
-            <div class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</div>
+            <span class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</span>
 
         </div>
 
