--- a/html/hkcosm_1.html
+++ b/html/hkcosm_1.html
@@ -91,17 +91,18 @@
         </nav>
     </div>
 </header>
-
 <section class="mainVisual">
-    <ul class="slider">
-        <li class="slider-item">1</li>
-        <li class="slider-item">2</li>
-    </ul>
-    <div class="mainVisual-text">
-        <h2 class="mainVisual-text-heading">BEAUTY FULL<br class="br"> SOLUTION</h2>
-        <div class="mainVisual-text-con">늘 앞선 생각과 발 빠른 창조로<br class="br-con"> 내일의 이슈를 만들어 갑니다.</div>
-        <div class="moreBtn">
-            <a href="#" class="moreBtn-link">Learn More</a>
+    <div class="mainVisual-wrap">
+        <div class="mainVisual-wrap-slider">
+            <div class="mainVisual-wrap-slider-item">1</div>
+            <div class="mainVisual-wrap-slider-item">2</div>
+        </div>
+        <div class="mainVisual-wrap-text">
+            <h2 class="mainVisual-wrap-text-heading">BEAUTY FULL<br class="br"> SOLUTION</h2>
+            <div class="mainVisual-wrap-text-con">늘 앞선 생각과 발 빠른 창조로<br class="br-con"> 내일의 이슈를 만들어 갑니다.</div>
+            <div class="moreBtn">
+                <a href="#" class="moreBtn-link">Learn More</a>
+            </div>
         </div>
     </div>
 </section>
@@ -251,75 +252,39 @@
         </ul>
     </div>
 </section>
-
 <footer class="footer">
-
     <div class="container">
-
         <h2 class="footer-logo"><img src="../images/footer_logo.png" alt="footer_logo"></h2>
-
         <ul class="footer-contact">
-
             <li class="footer-contact-list">Tel. +82-2-724-3712</li>
-
             <li class="footer-contact-list">Fax. +82-2-724-3715</li>
-
             <li class="footer-contact-list">E-mail. kunwooism@ihkcos.com</li>
-
         </ul>
-
         <div class="footer-text">
-
             <a href="#" class="footer-text-privacy">개인정보취급방침</a>
-
             <span class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</span>
-
         </div>
-
         <div class="footer-site">
-
             <div class="footer-site-map">
-
                 <a href="#" class="footer-site-map-link">SITEMAP</a>
-
             </div>
-
             <select name="famaily site" class="footer-site-family">
-
                 <option value="FAMILY SITE">FAMILY SITE</option>
-
                 <option value="FAMILY SITE">한국화장품</option>
-
                 <option value="FAMILY SITE">산심</option>
-
                 <option value="FAMILY SITE">효움</option>
-
                 <option value="FAMILY SITE">칼리</option>
-
                 <option value="FAMILY SITE">시크릿네이처</option>
-
                 <option value="FAMILY SITE">글로벌 에코 더샘</option>
-
             </select>
-
             <div class="footer-site-contactUs">
-
                 <a href="#" class="footer-site-contactUs-link">CONTACT US
-
                     <span class="footer-site-contactUs-link-arrow"></span>
-
                 </a>
-
             </div>
-
         </div>
-
     </div>
-
 </footer>
 
-
-
 </body>
-
 </html>
