--- a/html_src/hkcosm_1.html
+++ b/html_src/hkcosm_1.html
@@ -1,15 +1,16 @@
 <!--=include _include/_header.html -->
-
 <section class="mainVisual">
-    <ul class="slider">
-        <li class="slider-item">1</li>
-        <li class="slider-item">2</li>
-    </ul>
-    <div class="mainVisual-text">
-        <h2 class="mainVisual-text-heading">BEAUTY FULL<br class="br"> SOLUTION</h2>
-        <div class="mainVisual-text-con">늘 앞선 생각과 발 빠른 창조로<br class="br-con"> 내일의 이슈를 만들어 갑니다.</div>
-        <div class="moreBtn">
-            <a href="#" class="moreBtn-link">Learn More</a>
+    <div class="mainVisual-wrap">
+        <div class="mainVisual-wrap-slider">
+            <div class="mainVisual-wrap-slider-item">1</div>
+            <div class="mainVisual-wrap-slider-item">2</div>
+        </div>
+        <div class="mainVisual-wrap-text">
+            <h2 class="mainVisual-wrap-text-heading">BEAUTY FULL<br class="br"> SOLUTION</h2>
+            <div class="mainVisual-wrap-text-con">늘 앞선 생각과 발 빠른 창조로<br class="br-con"> 내일의 이슈를 만들어 갑니다.</div>
+            <div class="moreBtn">
+                <a href="#" class="moreBtn-link">Learn More</a>
+            </div>
         </div>
     </div>
 </section>
@@ -159,5 +160,4 @@
         </ul>
     </div>
 </section>
-
 <!--=include _include/_footer.html -->
