--- a/html/hkcosm_4_1.html
+++ b/html/hkcosm_4_1.html
@@ -9,7 +9,7 @@
     <link rel="https://cdn.rawgit.com/mfd/f3d96ec7f0e8f034cc22ea73b3797b59/raw/856f1dbb8d807aabceb80b6d4f94b464df461b3e/gotham.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="../../js/lib/jquery-3.2.1.min.js"></script>
+    <script src="../js/lib/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script src="../js/gnb.js"></script>
 </head>
@@ -29,7 +29,7 @@
             <button><span></span><span></span><span></span></button>
         </div>
     </div>
-    <div class="header-bottom active">
+    <div class="header-bottom">
         <nav class="gnb">
             <ul class="gnb-depth1">
                 <li class="gnb-depth1-item">
@@ -101,14 +101,16 @@
 
 <section class="contents">
     <div class="container">
-        <div class="contents-title">늘 앞선 생각과 발 빠른 창조로<br />내일의 이슈를 만들어 갑니다.</div>
-        <p class="contents-text">한국인의 피부에 가장 적합한 화장품 생산을 위해, 1962년 창업이래 수준 높은 아름다움만을 창조해 온 한국화장품제조는<br />친수성, 약산성, 바이오,리포좀, 산삼배양근 추출물 등을 이용한 화장품 등 첨단 피부과학을 꽃 피워오고 있습니다.</p>
-        <div class="contents-img">
-            <ul class="contents-img-list">
-                <li class="contents-img-list-item"><img src="../images/hkcosm_4_1/hkcosm_4_1_contents1.jpg" alt="로레알"></li>
-                <li class="contents-img-list-item line"><img src="../images/hkcosm_4_1/hkcosm_4_1_contents2.jpg" alt="랑콤"></li>
-                <li class="contents-img-list-item"><img src="../images/hkcosm_4_1/hkcosm_4_1_contents3.jpg" alt="인터코스"></li>
-            </ul>
+        <div class="contents-wrap">
+            <div class="contents-title">늘 앞선 생각과 발 빠른 창조로<br class="br">내일의 이슈를 만들어 갑니다.</div>
+            <p class="contents-text">한국인의 피부에 가장 적합한 화장품 생산을 위해, 1962년 창업이래 수준 높은 아름다움만을 창조해 온 한국화장품제조는<br class="br-con"> 친수성, 약산성, 바이오,리포좀, 산삼배양근 추출물 등을 이용한 화장품 등 첨단 피부과학을 꽃 피워오고 있습니다.</p>
+            <div class="contents-img">
+                <ul class="contents-img-list">
+                    <li class="contents-img-list-item mt30"><img src="../images/hkcosm_4_1/hkcosm_4_1_contents1.jpg" alt="로레알"></li>
+                    <li class="contents-img-list-item line mt30"><img src="../images/hkcosm_4_1/hkcosm_4_1_contents2.jpg" alt="랑콤"></li>
+                    <li class="contents-img-list-item mt30"><img src="../images/hkcosm_4_1/hkcosm_4_1_contents3.jpg" alt="인터코스"></li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
@@ -116,8 +118,42 @@
 <section class="beauty-slide">
     <h2 class="beauty-slide-title">BEAUTY FULL CHANGE</h2>
     <div class="beauty-slide-wrap">
-        <ul>
-            <li></li>
+        <ul class="beauty-slide-wrap-list">
+            <li class="beauty-slide-wrap-list-item">
+                <div class="beauty-slide-wrap-list-img"><img src="../images/hkcosm_4_1/beauty_slide_img1.jpg" alt="beauty1"></div>
+                <div class="beauty-slide-wrap-list-text">
+                    <div class="beauty-slide-wrap-list-text-heading">철저한 관리를 통한 품질 제일주의</div>
+                    <p class="beauty-slide-wrap-list-text-con">품질관리 시스템을 기반으로 한 연구를 통해 한국화장품제조의 근간인<br /> 최상의 품질 제일주의를 유지하고 있습니다.</p>
+                </div>
+            </li>
+            <li class="beauty-slide-wrap-list-item">
+                <div class="beauty-slide-wrap-list-img"><img src="../images/hkcosm_4_1/beauty_slide_img2.jpg" alt="beauty1"></div>
+                <div class="beauty-slide-wrap-list-text">
+                    <div class="beauty-slide-wrap-list-text-heading">수상으로 이어진 최상의 품질력</div>
+                    <p class="beauty-slide-wrap-list-text-con">반세기 장인정신과 BT, NT 등 최첨단 기술의 융합을 통한 연구가 <br>최상의 품질을 완성할 수 있었고 이는 다양한 수상 실적으로 이어졌습니다.</p>
+                </div>
+            </li>
+            <li class="beauty-slide-wrap-list-item">
+                <div class="beauty-slide-wrap-list-img"><img src="../images/hkcosm_4_1/beauty_slide_img3.jpg" alt="beauty1"></div>
+                <div class="beauty-slide-wrap-list-text">
+                    <div class="beauty-slide-wrap-list-text-heading">활발한 학술활동을 통한 연구개발</div>
+                    <p class="beauty-slide-wrap-list-text-con">세계 주요 화장품 학술대회 및 화장품 학회를 통한 학술활동을 통하여 <br>정보를 교류하고 트렌드를 예측하여 최첨단 신소재 및 제형을 연구 개발합니다.</p>
+                </div>
+            </li>
+            <li class="beauty-slide-wrap-list-item">
+                <div class="beauty-slide-wrap-list-img"><img src="../images/hkcosm_4_1/beauty_slide_img4.jpg" alt="beauty1"></div>
+                <div class="beauty-slide-wrap-list-text">
+                    <div class="beauty-slide-wrap-list-text-heading">고객의 니즈를 만족시키는 리더</div>
+                    <p class="beauty-slide-wrap-list-text-con">국내외 시장환경 분석, 연구개발 현황에 따른 고객 니즈 분석 결과를 활용하여 <br>화장품시장의 개발 동향을 파악함으로써 시장을 리드하는 새로운 화장품 컨셉을 기획, 개발합니다.</p>
+                </div>
+            </li>
+            <li class="beauty-slide-wrap-list-item">
+                <div class="beauty-slide-wrap-list-img"><img src="../images/hkcosm_4_1/beauty_slide_img5.jpg" alt="beauty1"></div>
+                <div class="beauty-slide-wrap-list-text">
+                    <div class="beauty-slide-wrap-list-text-heading">활발한 산학연 네트워크 구축</div>
+                    <p class="beauty-slide-wrap-list-text-con">상업화 힘든 희귀식물을 이용한 신개념 화장품 원료개발 등 <br>창의적이고 차별화된 특화기술 개발에 힘써 왔습니다.</p>
+                </div>
+            </li>
         </ul>
     </div>
 </section>
