--- a/html/hkcosm_2_1.html
+++ b/html/hkcosm_2_1.html
@@ -9,7 +9,7 @@
     <link rel="https://cdn.rawgit.com/mfd/f3d96ec7f0e8f034cc22ea73b3797b59/raw/856f1dbb8d807aabceb80b6d4f94b464df461b3e/gotham.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="../../js/lib/jquery-3.2.1.min.js"></script>
+    <script src="../js/lib/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script src="../js/gnb.js"></script>
 </head>
@@ -29,7 +29,7 @@
             <button><span></span><span></span><span></span></button>
         </div>
     </div>
-    <div class="header-bottom active">
+    <div class="header-bottom">
         <nav class="gnb">
             <ul class="gnb-depth1">
                 <li class="gnb-depth1-item">
@@ -100,19 +100,21 @@
 </section>
 
 <section class="contents">
-    <div class="inner-box">
-        <div class="contents-title">한국의 아름다움,<br />한국화장품제조가 만들어 갑니다!</div>
-        <p class="contents-text">건강한 아름다움을 실현하고 생활을 아름답게 가꾼다는 고객과의 약속을 지키기 위해<br />
-            1962년부터 반세기가 흐른 지금까지 오직 한 길만을 걸어 온 한국화장품제조.<br />
-            이제 그 변치 않는 신념으로 OEM, ODM은 물론 비즈니스에 꼭 맞는 토탈 컨설팅으로 귀사의 브랜드에 든든한 경쟁력이 되겠습니다.
-        </p>
+    <div class="container">
+        <div class="contents-wrap">
+            <div class="contents-title">한국의 아름다움,<br class="br">한국화장품제조가 만들어 갑니다!</div>
+            <p class="contents-text">건강한 아름다움을 실현하고 생활을 아름답게 가꾼다는 고객과의 약속을 지키기 위해<br class="br-con">
+                1962년부터 반세기가 흐른 지금까지 오직 한 길만을 걸어 온 한국화장품제조.<br class="br-con">
+                이제 그 변치 않는 신념으로 OEM, ODM은 물론 비즈니스에 꼭 맞는 토탈 컨설팅으로 귀사의 브랜드에 든든한 경쟁력이 되겠습니다.
+            </p>
+        </div>
     </div>
 </section>
 
 <section class="overview">
     <div class="overview-img"></div>
     <div class="overview-contents">
-        <div class="overview-wrap">
+        <div class="container">
             <h2 class="overview-contents-title">OVERVIEW</h2>
             <ul class="overview-contents-list">
                 <li class="overview-contents-list-item">
@@ -147,7 +149,7 @@
                     <div><img src="../images/hkcosm_2_1/overview_5.jpg" alt="연락처"></div>
                     <div class="overview-contents-list-text">
                         <div class="overview-contents-list-text-title">연락처</div>
-                        <div class="overview-contents-list-text-con">Tel. 02 - 724 - 3712 Fax. 02- 724 - 3715</div>
+                        <div class="overview-contents-list-text-con">Tel. 02 - 724 - 3712<br />Fax. 02- 724 - 3715</div>
                     </div>
                 </li>
             </ul>
@@ -158,15 +160,17 @@
 
 <section class="prCenter">
     <div class="container">
-        <h2 class="prCenter-title">PR CENTER</h2>
-        <div class="prCenter-video">
-            <iframe src="https://www.youtube.com/embed/E7an_ow-JTE?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
-            <div class="prCenter-video-img">
-                <img src="../images/hkcosm_2_1/prcenter_video_img.jpg" alt="#">
+        <div class="prCenter-wrap">
+            <h2 class="prCenter-title">PR CENTER</h2>
+            <div class="prCenter-video">
+                <iframe src="https://www.youtube.com/embed/E7an_ow-JTE?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+                <div class="prCenter-video-img">
+                    <img src="../images/hkcosm_2_1/prcenter_video_img.jpg" alt="#">
+                </div>
             </div>
+            <div class="prCenter-heading">반세기, 오직 화장품만을<br class="br">사랑하고 연구해온 열정</div>
+            <p class="prCenter-text">한국화장품제조는 그 열정이 만들어낸 혁신적인 기술과 완벽한 제품, 고객사가 원하는 그 이상의 컨설팅과 플랜으로 여러분의 글로벌 성공신화를<br class="br-con">창조하는 최상의 파트너가 되겠습니다!</p>
         </div>
-        <div class="prCenter-heading">반세기, 오직 화장품만을<br />사랑하고 연구해온 열정</div>
-        <p class="prCenter-text">한국화장품제조는 그 열정이 만들어낸 혁신적인 기술과 완벽한 제품, 고객사가 원하는 그 이상의 컨설팅과 플랜으로 여러분의 글로벌 성공신화를<br />창조하는 최상의 파트너가 되겠습니다!</p>
     </div>
 </section>
 
