--- a/html/hkcosm_3_1.html
+++ b/html/hkcosm_3_1.html
@@ -9,7 +9,7 @@
     <link rel="https://cdn.rawgit.com/mfd/f3d96ec7f0e8f034cc22ea73b3797b59/raw/856f1dbb8d807aabceb80b6d4f94b464df461b3e/gotham.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="../../js/lib/jquery-3.2.1.min.js"></script>
+    <script src="../js/lib/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script src="../js/gnb.js"></script>
 </head>
@@ -29,7 +29,7 @@
             <button><span></span><span></span><span></span></button>
         </div>
     </div>
-    <div class="header-bottom active">
+    <div class="header-bottom">
         <nav class="gnb">
             <ul class="gnb-depth1">
                 <li class="gnb-depth1-item">
@@ -101,52 +101,62 @@
 
 <section class="contents">
     <div class="container">
-        <div class="contents-title">57 Years of Experience<br />한국화장품제조가 만들어 갑니다!</div>
-        <p class="contents-text">한국화장품제조는 57년의 역사와 전통 속에서 자사 브랜드 개발/ 생산/ 유통의 모든 경험을 확보하고 있으며<br />이를 바탕으로 귀사에 최적화된 솔루션을 제시합니다.</p>
-        <div class="contents-img">
-            <ul class="contents-img-list">
-                <li class="contents-img-list-item"><img src="../images/hkcosm_3_1/hkcosm_3_1_contents1.jpg" alt="컨설팅"></li>
-                <li class="contents-img-list-item line"><img src="../images/hkcosm_3_1/hkcosm_3_1_contents2.jpg" alt="브랜딩"></li>
-                <li class="contents-img-list-item"><img src="../images/hkcosm_3_1/hkcosm_3_1_contents3.jpg" alt="디자인"></li>
-            </ul>
+        <div class="contents-wrap">
+            <div class="contents-title bold">57 Years of Experience</div>
+            <p class="contents-text">한국화장품제조는 57년의 역사와 전통 속에서 자사 브랜드 개발/ 생산/ 유통의 모든 경험을 확보하고 있으며<br class="br-con">이를 바탕으로 귀사에 최적화된 솔루션을 제시합니다.</p>
+            <div class="contents-img">
+                <ul class="contents-img-list">
+                    <li class="contents-img-list-item item1"><img src="../images/hkcosm_3_1/hkcosm_3_1_contents1.jpg" alt="컨설팅"></li>
+                    <li class="contents-img-list-item line"><img src="../images/hkcosm_3_1/hkcosm_3_1_contents2.jpg" alt="브랜딩"></li>
+                    <li class="contents-img-list-item item3" ><img src="../images/hkcosm_3_1/hkcosm_3_1_contents3.jpg" alt="디자인"></li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
 
-<section class="consulting">
-    <div class="consulting-bg"><h2 class="consulting-bg-title"><img src="../images/hkcosm_3_1/consulting_1.png" alt="consulting"></h2></div>
-    <div class="container">
-        <div class="consulting-wrap">
-            <div class="consulting-wrap-title">신생 업체/ 소규모 업체를 가리지<br />않는 긴밀한 컨설팅</div>
-            <p class="consulting-wrap-text">한국화장품제조의 Beauty Full Solution은 풍부한 경험을 통해<br />
-                업체와 브랜드의 다양한 상황에 맞춘 컨설팅을 제공합니다.<br />
-                각각의 프로젝트에 맞추어 구성되는 컨설팅 조직은 신생 업체, 소규모 업체를 가리지 않고 긴밀한 컨설팅 서비스를 제공합니다.
-            </p>
+<section class="consulting bgBox">
+    <div class="consulting-bg"><h2 class="bgBox-title"><img src="../images/hkcosm_3_1/consulting_1.png" alt="consulting"></h2></div>
+    <div class="bgBox-wrap">
+        <div class="bgBox-wrap-con">
+            <div class="container">
+                <div class="bgBox-wrap-title">신생 업체/ 소규모 업체를 가리지<br class="br"> 않는 긴밀한 컨설팅</div>
+                <p class="bgBox-wrap-text">한국화장품제조의 Beauty Full Solution은 풍부한 경험을 통해<br class="br-con">
+                    업체와 브랜드의 다양한 상황에 맞춘 컨설팅을 제공합니다.<br class="br-con">
+                    각각의 프로젝트에 맞추어 구성되는 컨설팅 조직은 신생 업체, 소규모 업체를 가리지 않고 긴밀한 컨설팅 서비스를 제공합니다.
+                </p>
+            </div>
         </div>
     </div>
 </section>
 
-<section class="branding">
-    <div class="branding-bg"><h2 class="branding-bg-title"><img src="../images/hkcosm_3_1/branding_1.png" alt="branding"></h2></div>
-    <div class="container">
-        <div class="branding-wrap">
-            <div class="branding-wrap-title">수 많은 프로젝트를 통해 확보한<br />기획/ 브랜딩 경험</div>
-            <p class="branding-wrap-text">귀사가 제품과 브랜드 개발의 어느 단계에 있더라도 한국화장품제조의<br />
-                안정적인 기획/ 브랜딩 경험은 가장 최적화된 솔루션을 제공합니다.<br />
-                마켓 리서치부터 유통 인사이트까지, 한국화장품제조의 노하우는<br />
-                브랜드와 제품의 모든 부분에 정확한 처방을 드립니다.</p>
+<section class="branding bgBox">
+    <div class="branding-bg"><h2 class="bgBox-title"><img src="../images/hkcosm_3_1/branding_1.png" alt="branding"></h2></div>
+    <div class="bgBox-wrap">
+        <div class="bgBox-wrap-con">
+            <div class="container">
+                <div class="bgBox-wrap-title">수 많은 프로젝트를 통해 확보한<br class="br"> 기획/ 브랜딩 경험</div>
+                <p class="bgBox-wrap-text">귀사가 제품과 브랜드 개발의 어느 단계에 있더라도 한국화장품제조의<br class="br-con">
+                    안정적인 기획/ 브랜딩 경험은 가장 최적화된 솔루션을 제공합니다.<br class="br-con">
+                    마켓 리서치부터 유통 인사이트까지, 한국화장품제조의 노하우는<br class="br-con">
+                    브랜드와 제품의 모든 부분에 정확한 처방을 드립니다.
+                </p>
+            </div>
         </div>
     </div>
 </section>
 
-<section class="design">
-    <div class="design-bg"><h2 class="design-bg-title"><img src="../images/hkcosm_3_1/design_1.png" alt="design"></h2></div>
-    <div class="container">
-        <div class="design-wrap">
-            <div class="design-wrap-title">수 많은 성공 제품을 개발한<br />디자인/ 제작 경험</div>
-            <p class="design-wrap-text">57년의 역사 속에서 한국화장품제조는 수 많은 제품에 대한 디자인과 제작 경험을<br />
-                쌓아왔습니다. 특히, 쿠션, 선스틱 컨실러 등 마켓 선도 아이템에는<br />
-                한국화장품제조의 경험과 노하우가 잘 반영되어 있습니다.</p>
+<section class="design bgBox">
+    <div class="design-bg"><h2 class="bgBox-title"><img src="../images/hkcosm_3_1/design_1.png" alt="design"></h2></div>
+    <div class="bgBox-wrap">
+        <div class="bgBox-wrap-con">
+            <div class="container">
+                <div class="bgBox-wrap-title">수 많은 성공 제품을 개발한<br class="br"> 디자인/ 제작 경험</div>
+                <p class="bgBox-wrap-text">57년의 역사 속에서 한국화장품제조는 수 많은 제품에 대한 디자인과 제작 경험을<br class="br-con">
+                    쌓아왔습니다. 특히, 쿠션, 선스틱 컨실러 등 마켓 선도 아이템에는<br class="br-con">
+                    한국화장품제조의 경험과 노하우가 잘 반영되어 있습니다.
+                </p>
+            </div>
         </div>
     </div>
 </section>
